Wed Jan 15 10:40:22 2003  Gary Wong  <gtw@gnu.org>

	* NEWS, README: Updated in preparation for a 0.13 pre-release.

Mon Jan 13 18:54:09 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (GTKRolloutUpdate): honour fOutputWinPC.
	(reported by Albert Silver)

Mon Jan 13 18:17:57 2003  Joern Thyssen  <jth@gnubg.org>

	* show.c (CommandShowFullBoard): player names and scores were inverted.
	(reported by Nardy Pillards)

Sun Jan 12 17:29:14 2003  Gary Wong  <gtw@gnu.org>

	* eval.c (EvalKey): New parameter fCubefulEquity, so that cache
	entries which set OUTPUT_CUBEFUL_EQUITY will not collide with
	those which do not.  All callers changed.

Sun Jan 12 13:23:44 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (ProgressValue): add missing "if ( ! fShowProgress )".
	(contributed by O.M. Riordan)

Sat Jan 11 17:03:37 2003  Gary Wong  <gtw@gnu.org>

	* gtkgame.c (RecordErase): Quote player name parameter.  (Reported by
	Nardy Pillards.)

Sat Jan 11 11:29:01 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktexi.c, gtkmovefilter.c, import.c, show.c, gtkgame.c, eval.c:
	pacify fussy compilers.

Sat Jan 11 10:58:54 2003  Joern Thyssen  <jth@gnubg.org>

	* rollout.c (BasicCubefulRollout): fix bug for bearoff truncation
	of cubeful rollouts.

Fri Jan 10 22:56:30 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (FindBestMovePlied, FindnSaveBestMoves):
	change algorithm for accept=0 according to Michael
	Depreli's suggestions.

Fri Jan 10 19:48:24 2003  Joern Thyssen  <jth@gnubg.org>

	* boards.xml: add Michael Depreli's designs.

Fri Jan 10 19:42:38 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (EvalChanged): fix bug when comparing to
	predefined settings.
	(reported by Scott Steiner)

Fri Jan 10 19:18:59 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c: new command "show fullboard" that also shows
	the cube, dice etc.
	* show.c (CommandShowFullBoard): new function.

	* gtkchequer.c (ShowMove, MoveListMove): use new command.

Fri Jan 10 19:12:01 2003  Joern Thyssen  <jth@gnubg.org>